[workspace]
members = [
    "dao",
]
exclude = ["target"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Aurora Labs <info@aurora.dev>"]
rust-version = "1.64.0"
description = "Aurora relayer API testing library"
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/aurora-is-near/aurora-api-testing-rs"
homepage = "https://github.com/aurora-is-near/aurora-api-testing-rs"
keywords = ["aurora", "testing"]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
jsonrpsee-http-client = "0.15.1"
jsonrpsee-core= "0.15.1"
jsonrpsee-types = "0.15.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
dotenv = "0.15.0"
itertools = "0.10.5"
rusqlite = { version = "0.28.0", features = ["bundled"] }