[workspace]
members = [
    "dao",
    "dynamic_apis_tests",
]
exclude = ["target"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Aurora Labs <info@aurora.dev>"]
rust-version = "1.64.0"
description = "Aurora relayer API testing library"
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/aurora-is-near/aurora-api-testing-rs"
homepage = "https://github.com/aurora-is-near/aurora-api-testing-rs"
keywords = ["aurora", "testing"]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
jsonrpsee-http-client = "0.16.0"
jsonrpsee-ws-client = "0.16.0"
jsonrpsee-core= "0.16.0"
jsonrpsee-types = "0.16.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
dotenv = "0.15.0"
itertools = "0.10.5"
ethereum-types = "0.14.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_derive = "1.0"
serde_with = { version = "1.4.0", features = ["json"]}
num-bigint = { version = "0.4", default-features = false }
hex = "0.4"
ethers-core = "1.0.2"
ethers-providers = "1.0.2"
ethers-signers = "1.0.2"
ethers-middleware = "1.0.2"
ethers-contract = "1.0.2"
serial_test = "0.10.0"
futures = "0.3.25"