[workspace]
members = [
    "dao",
    "dynamic_apis_tests",
]
exclude = ["target"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Aurora Labs <info@aurora.dev>"]
rust-version = "1.65.0"
description = "Aurora relayer API testing library"
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/aurora-is-near/aurora-api-testing-rs"
homepage = "https://github.com/aurora-is-near/aurora-api-testing-rs"
keywords = ["aurora", "testing"]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
jsonrpsee-http-client = "0.18.0"
jsonrpsee-ws-client = "0.18.0"
jsonrpsee-core= "0.18.0"
jsonrpsee-types = "0.18.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
dotenv = "0.15.0"
itertools = "0.10.5"
ethereum-types = "0.14.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_derive = "1.0"
serde_with = { version = "2.3.2", features = ["json"]}
num-bigint = { version = "0.4", default-features = false }
hex = "0.4"
ethers-core = "2.0.3"
ethers-providers = "2.0.3"
ethers-signers = "2.0.3"
ethers-middleware = "2.0.3"
ethers-contract = "2.0.3"
serial_test = "2.0.0"
futures = "0.3.25"
