[package]
name = "dao"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
dotenv.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
