[package]
name = "dao"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
dotenv.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
itertools.workspace = true
ethereum-types.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
serde_with.workspace = true
