[package]
name = "dynamic_apis_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dao = { path = "../dao", default-features = false}
anyhow.workspace = true
jsonrpsee-http-client.workspace = true
jsonrpsee-ws-client.workspace = true
jsonrpsee-core.workspace = true
jsonrpsee-types.workspace = true
ethereum-types.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
num-bigint.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
hex.workspace = true