[package]
name = "dynamic_apis_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dao = { path = "../dao", default-features = false}
anyhow.workspace = true
jsonrpsee-http-client.workspace = true
jsonrpsee-ws-client.workspace = true
jsonrpsee-core.workspace = true
jsonrpsee-types.workspace = true
ethereum-types.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
num-bigint.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
rusqlite.workspace = true
hex.workspace = true
ethers-core.workspace = true
ethers-providers.workspace = true
ethers-signers.workspace = true
ethers-middleware.workspace = true
ethers-contract.workspace = true
futures.workspace = true
serial_test.workspace = true
